test/corpus/conditionals.txt
==================
Simple if
==================

@if(user)
  <p>Hello</p>
@end

---

(document
  (conditional
    (directive_start)
    (parameter)
    (element
      (start_tag (tag_name))
      (text)
      (end_tag (tag_name)))
    (directive_end)))

==================
If with elseif and else
==================

@if(user.admin)
  <p>Admin</p>
@elseif(user.moderator)
  <p>Mod</p>
@else
  <p>User</p>
@end

---

(document
  (conditional
    (directive_start)
    (parameter)
    (element
      (start_tag (tag_name))
      (text)
      (end_tag (tag_name)))
    (conditional_keyword
      (directive)
      (parameter))
    (element
      (start_tag (tag_name))
      (text)
      (end_tag (tag_name)))
    (conditional_keyword
      (directive))
    (element
      (start_tag (tag_name))
      (text)
      (end_tag (tag_name)))
    (directive_end)))

==================
Unless
==================

@unless(account.isActive)
  <p>Please verify</p>
@end

---

(document
  (conditional
    (directive_start)
    (parameter)
    (element
      (start_tag (tag_name))
      (text)
      (end_tag (tag_name)))
    (directive_end)))
